[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/CustomButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/tile_background.jpg" type="Texture" id=2]
[ext_resource path="res://font/Rowdy-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://ui/OLD_EndGame.gd" type="Script" id=5]

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 9
outline_color = Color( 0.239216, 0.239216, 0.239216, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 43
outline_size = 4
outline_color = Color( 0.113725, 0.113725, 0.113725, 1 )
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[node name="EndGame" type="Control"]
pause_mode = 2
margin_right = 1200.0
margin_bottom = 600.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.423529, 0.423529, 0.423529, 0.607843 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -256.0
margin_top = -182.0
margin_right = 256.0
margin_bottom = 194.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 2

[node name="lb_you_sparks" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -213.0
margin_top = 136.0
margin_right = 213.0
margin_bottom = 197.0
custom_fonts/font = SubResource( 2 )
text = "SPARKS 2500"
align = 1

[node name="VBoxLab" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -231.0
margin_top = -94.0
margin_right = 127.0
margin_bottom = 96.0
alignment = 1

[node name="lb_collected" type="Label" parent="VBoxLab"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
margin_top = 11.0
margin_right = 358.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "Collected"

[node name="lb_lose" type="Label" parent="VBoxLab"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
margin_top = 68.0
margin_right = 358.0
margin_bottom = 121.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "You Lose  :("

[node name="lb_total" type="Label" parent="VBoxLab"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
margin_top = 125.0
margin_right = 358.0
margin_bottom = 178.0
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "Total"

[node name="VBoxNum" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -17.0
margin_top = -94.0
margin_right = 229.0
margin_bottom = 96.0
alignment = 1

[node name="lb_collected" type="Label" parent="VBoxNum"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
margin_top = 11.0
margin_right = 246.0
margin_bottom = 64.0
custom_fonts/font = SubResource( 3 )
text = "+2000"
align = 2

[node name="lb_lose" type="Label" parent="VBoxNum"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
margin_top = 68.0
margin_right = 246.0
margin_bottom = 121.0
custom_colors/font_color = Color( 1, 0, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "-500"
align = 2

[node name="lb_total" type="Label" parent="VBoxNum"]
modulate = Color( 0.972549, 1, 0.482353, 1 )
margin_top = 125.0
margin_right = 246.0
margin_bottom = 178.0
custom_colors/font_color = Color( 0.945098, 1, 0, 1 )
custom_fonts/font = SubResource( 3 )
text = "+2000"
align = 2

[node name="HBoxBtn" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -334.5
margin_top = 112.0
margin_right = 334.5
margin_bottom = 172.0
custom_constants/separation = 43
alignment = 1

[node name="btn_retry" parent="HBoxBtn" instance=ExtResource( 1 )]
visible = false
margin_right = 200.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "RETRY"

[node name="btn_menu" parent="HBoxBtn" instance=ExtResource( 1 )]
visible = false
margin_left = 113.0
margin_right = 313.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "MAIN MENU"

[node name="btn_collect" parent="HBoxBtn" instance=ExtResource( 1 )]
margin_left = 234.0
margin_right = 434.0
margin_bottom = 60.0
rect_min_size = Vector2( 200, 60 )
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
text = "GATHER!"

[node name="Tween" type="Tween" parent="."]
